# opentdm

./: Makefile  g_chase.c  g_items.c  g_local.h  g_main.c  g_save.c  g_spawn.c  g_svcmds.c  g_tdm_client.c  g_tdm_core.c  g_tdm_core.h  g_tdm_curl.c  g_tdm_stats.c  g_utils.c  g_weapon.c  meson.build  meson_options.txt  mt19937.c  opentdm.rc  p_client.c  q_shared.c  q_shared.h
.github/workflows/: build.yml
subprojects/: libcurl.wrap
